- LONG map types are now correctly written to the map FITS file on 64
  bit platforms where the fundamental C language 'long' integer type
  is 8 bytes wide.
- Improved memory management.
  - Better C++ exception safety.
  - Reduced run-time memory requirements.
  - Slighty improved performance due to less deep copies of large
    arrays.
- Fixed inversion of source photo images from left to right and top to
  bottom.
- Support for maps containing 64 bit signed integer data has been
  added.  Set DATA_TYPE in your MaRC input file to LONGLONG to use
  this feature.
- Initial support for Doxygen based MaRC source code documentation
  generation is now available.  Assuming Doxygen is installed, run
  `make doxygen-doc' from the top-level MaRC source directory to
  generate MaRC library and program source code documentation.
  Generated documentation will reside in the doc/doxygen directory.

24 July 2017 - MaRC 0.9.8

- MaRC now requires C++14 conforming compilers.  The 'configure'
  script will attempt to detect and enable C++14 support in the C++
  compiler in use. Verified to build with g++ 6.3 and Clang++ 3.9.
- Modernized the build infrastructure to leverage the latest versions
  of the GNU autotools (Autoconf, Automake and Libtool).  This should
  provide better build support on more platforms, particularly recent
  ones.
- MaRC now passes the static analysis scan run through Coverity (see
  https://scan.coverity.com/projects/ossama-othman-marc).
- Added better support for automated detection of CPU tuning compiler
  flags.
- Updated LPGL license terms from 2.0 to 2.1.
- Updated GFDL license terms from 1.2 to 1.3.
- Minor optimizations.
- Slight reduction in static footprint.
- Fixed a bug MaRC::Vector iteration problem that prevented properly
  mapping images where the latitude and longitude at the optical axis
  ({LAT,LON}_AT_CENTER) instead of the of body center
  ({SAMPLE,LINE}_CENTER were given.  Support for the LAT_AT_CENTER and